# ChangeLog for kde-base/kdebase
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.96 2003/11/10 18:54:49 caleb Exp $

*kdebase-3.2.0_beta1-r1 (10 Nov 2003)

  10 Nov 2003; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0_beta1-r1.ebuild,
  files/3.2.0_beta1-r1/Xsetup, files/3.2.0_beta1-r1/backgroundrc,
  files/3.2.0_beta1-r1/kdmrc,
  files/3.2.0_beta1-r1/startkde-3.2.0_beta1-r1-gentoo.diff:
  Fixes to make kdm better? see bug #32994

*kdebase-3.2.0_beta1 (01 Nov 2003)

  01 Nov 2003; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0_beta1.ebuild,
  files/3.2.0_beta1/backgroundrc, files/3.2.0_beta1/kdmrc,
  files/3.2.0_beta1/startkde-3.2.0_beta1-gentoo.diff:
  New beta version

  07 Oct 2003; Brad House <brad_mssw@gentoo.org> kdebase-3.1.4.ebuild,
  files/kdebase-3.1.4-amd64-accessviol.patch:
  patch to get rid of access violation during install
  on amd64. Based on patch from Andrew Johnson <ajohnson@lastaccess.com>

  04 Oct 2003; Brad House <brad_mssw@gentoo.org> kdebase-3.1.4.ebuild:
  add ~amd64 flag

  28 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdebase-3.1.4.ebuild,
  files/konq-crash-patch.diff:
  patch from kde bug database to fix a konq crash

  27 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdebase-2.2.2-r5.ebuild,
  kdebase-2.2.2-r5.ebuild, kdebase-3.1.1a.ebuild, kdebase-3.1.1a.ebuild,
  kdebase-3.1.3.ebuild, kdebase-3.1.3.ebuild:
  removing stale versions

  26 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdebase-3.1.4.ebuild,
  files/focus-patch.diff:
  add a focus patch that fixes bug #29648 - no revision bump

  26 Sep 2003; Jason Wever <weeve@gentoo.org> kdebase-3.1.4.ebuild:
  Added sparc keyword.

*kdebase-3.2.0_alpha2 (25 Sep 2003)

  25 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0_alpha1.ebuild,
  kdebase-3.2.0_alpha1.ebuild, kdebase-3.2.0_alpha2.ebuild,
  files/3.2.0_alpha1/backgroundrc, files/3.2.0_alpha1/kdmrc,