@@ -1,11 +1,11 @@
-MD5 202ca67dc9cd66a3b6be520b6ec52edb kdebase-3.2.0_beta1-r1.ebuild 3583
+MD5 98f3de83e5e5e5667b901c8e925b1268 kdebase-3.2.0_beta1-r1.ebuild 3585
 MD5 84d91eead31fcf756ae37c745232e88d kdebase-3.1.2.ebuild 3791
 MD5 46d2f98f4ec0ac0a50357b3ab351b8dc kdebase-3.0.5b.ebuild 7925
 MD5 c48ad284a9ed3e1a25f6672284c03075 kdebase-3.1.4.ebuild 4003
 MD5 4c5f1af579421648a9bc8f7bc0b3e5f8 kdebase-3.0.4-r3.ebuild 4486
 MD5 1687699e3ed7299098d65b414d68fbe1 kdebase-3.2.0_beta1.ebuild 3264
 MD5 c5e47769d4235122e0d731ae7639cd64 kdebase-3.2.0_alpha2.ebuild 3236
-MD5 1083b667c25df9a233a804a77a62bde5 ChangeLog 17155
+MD5 4f4da27f88dd7a7f80c532c9123156af ChangeLog 17258
 MD5 14889ab75f97d76e58b0c1154e7683a9 metadata.xml 161
 MD5 c07ead342cf5e19907a9ba978d713d80 files/digest-kdebase-3.0.5b 69
 MD5 b048371a651391ef2bb4166e40e6adff files/kde.pam 405
