@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.96 2003/11/10 18:54:49 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.97 2003/11/12 17:18:04 caleb Exp $
+
+  12 Nov 2003; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0_beta1-r1.ebuild:
+  Fix a couple of lines
 
 *kdebase-3.2.0_beta1-r1 (10 Nov 2003)
 
